devopsMetadata/objects/User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Git_Branch_Url__c</fullName>
        <description>Connected feature branch for User Story</description>
        <inlineHelpText>Connected feature branch for User Story</inlineHelpText>
        <label>Git Branch Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>Progress of User Story</description>
        <label>Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Story Project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source</label>
        <referenceTo>Orgs__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint of User Story</description>
        <label>Sprint</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Sprint__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of User Story</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Orgs__c</referenceTo>
        <relationshipLabel>User Stories (Target)</relationshipLabel>
        <relationshipName>User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story_Name__c</fullName>
        <label>User Story Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Project__c</columns>
        <columns>Sprint__c</columns>
        <columns>Source__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{00000}</displayFormat>
        <label>User Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Source_And_Target_Cannot_Be_Same</fullName>
        <active>true</active>
        <errorConditionFormula>Source__c  =  Target__c</errorConditionFormula>
        <errorDisplayField>Target__c</errorDisplayField>
        <errorMessage>Source &amp; Target Environment Cannot be Same.</errorMessage>
    </validationRules>
</CustomObject>